--- a/PythonBasics1/homework.ipynb
+++ b/PythonBasics1/homework.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Домашнее задание к лекции \"Основы Python\"\n",
     "\n",
-    "### Сравнение длин строк\n"
+    "### 1. Сравнение длин строк\n"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Високосный код"
+    "### 2. Високосный код"
    ]
   },
   {
@@ -75,21 +75,21 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Знак зодиака"
+    "### 3. Знак зодиака"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите день: 14\n",
-      "Введите месяц: МаЙ\n",
-      "Ваш знак зодиака: Телец\n"
+      "Введите день: 25\n",
+      "Введите месяц: декабрь\n",
+      "Ваш знак зодиака: Козерог\n"
      ]
     }
    ],
@@ -135,6 +135,122 @@
     "    zodiak = 'астрологам неизвестен'\n",
     "\n",
     "print('Ваш знак зодиака:', zodiak)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 4. Упаковка товара"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Стандартная коробка №3\n"
+     ]
+    }
+   ],
+   "source": [
+    "width = 70\n",
+    "heigth = 60\n",
+    "depth = 80\n",
+    "\n",
+    "if width < 15 and heigth < 15 and depth < 15:\n",
+    "    print('Коробка №1')\n",
+    "elif heigth > 200:\n",
+    "    print('Коробка для лыж')\n",
+    "elif 15 <= width < 50 or 15 <= heigth < 50 or 15 <= depth < 50:\n",
+    "    print('Коробка №2')\n",
+    "else:\n",
+    "    print('Стандартная коробка №3')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 5. Счастливый билет"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Счастливый билет\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 123321\n",
+    "\n",
+    "if (int(str(number)[0]) + int(str(number)[1]) + int(str(number)[2]) == \n",
+    "    int(str(number)[3]) + int(str(number)[4]) + int(str(number)[5])):\n",
+    "    print('Счастливый билет')\n",
+    "else:\n",
+    "    print('Несчастливый билет')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 6. Площади фигур"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите тип фигуры: ва\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "shape = input('Введите тип фигуры: ')\n",
+    "\n",
+    "if shape.lower() == 'треугольник':\n",
+    "    side_a = float(input('Введите длину стороны A: '))\n",
+    "    side_b = float(input('Введите длину стороны B: '))\n",
+    "    side_c = float(input('Введите длину стороны C: '))\n",
+    "    p = (side_a + side_b + side_c) / 2\n",
+    "    square = math.sqrt(p * (p - side_a) * (p - side_b) * (p - side_c))\n",
+    "    print('Площадь треугольника:', round(square, 2))\n",
+    "    \n",
+    "elif shape.lower() == 'круг':\n",
+    "    radius = float(input('Введите радиус: '))\n",
+    "    square = math.pi * radius**2\n",
+    "    print('Площадь круга:', round(square, 2))\n",
+    "    \n",
+    "elif shape.lower() == 'прямоугольник':\n",
+    "    side_a = float(input('Введите длину стороны A: '))\n",
+    "    side_b = float(input('Введите длину стороны B: '))\n",
+    "    square = side_a * side_b\n",
+    "    print('Площадь прямоугольника:', round(square, 2))\n",
+    "    \n",
+    "else:\n",
+    "    print('Неизвестная фигура')"
    ]
   }
  ],
