--- a/PythonBasics2/homework.ipynb
+++ b/PythonBasics2/homework.ipynb
@@ -96,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Alex и Emma\nArthur и Kate\nJohn и Kira\nPeter и Liza\nRichard и Trisha\n"
+      "Идеальные пары:\nAlex и Emma\nArthur и Kate\nJohn и Kira\nPeter и Liza\nRichard и Trisha\n"
      ]
     }
    ],
@@ -112,6 +112,7 @@
     "girls = ['Kate', 'Liza', 'Kira', 'Emma', 'Trisha']\n",
     "\n",
     "if len(boys) == len(girls):\n",
+    "    print(\"Идеальные пары:\")\n",
     "    for pair in list(zip(sorted(boys), sorted(girls))):\n",
     "        print(pair[0], 'и', pair[1])\n",
     "else:\n",
@@ -162,6 +163,73 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Среднее число просмотров на уникального пользователя: 23.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "stream = [\n",
+    "'2018-01-01,user1,3',\n",
+    "'2018-01-07,user1,4',\n",
+    "'2018-03-29,user1,1',\n",
+    "'2018-04-04,user1,13',\n",
+    "'2018-01-05,user2,7',\n",
+    "'2018-06-14,user3,4',\n",
+    "'2018-07-02,user3,10',\n",
+    "'2018-03-21,user4,19',\n",
+    "'2018-03-22,user4,4',\n",
+    "'2018-04-22,user4,8',\n",
+    "'2018-05-03,user4,9',\n",
+    "'2018-05-11,user4,11',\n",
+    "]\n",
+    "\n",
+    "total_views = sum([int(element.split(',')[2]) for element in stream])\n",
+    "no_of_users = len(set([element.split(',')[1] for element in stream]))\n",
+    "\n",
+    "print(\"Среднее число просмотров на уникального пользователя:\", round(total_views / no_of_users, 2))"
+   ]
+  },
+  {
+   "source": [
+    "### 6. Повторяющиеся числа"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "string_of_numbers = input(\"Введите строку чисел, разделенных пробелом:\")\n",
+    "# string_of_numbers = '4 8 0 3 4 2 0 3';\n",
+    "# string_of_numbers = '1 1 1 1 1 2 2 2'\n",
+    "\n",
+    "list_of_numbers = string_of_numbers.split(' ')\n",
+    "more_than_one_occurence = (\n",
+    "    [unique_number for unique_number in set(list_of_numbers) if list_of_numbers.count(unique_number) > 1])\n",
+    "\n",
+    "print(' '.join(sorted(more_than_one_occurence)))\n"
+   ]
   }
  ]
 }
