--- a/PythonBasics2/homework.ipynb
+++ b/PythonBasics2/homework.ipynb
@@ -221,7 +221,7 @@
    ],
    "source": [
     "string_of_numbers = input(\"Введите строку чисел, разделенных пробелом:\")\n",
-    "# string_of_numbers = '4 8 0 3 4 2 0 3';\n",
+    "# string_of_numbers = '4 8 0 3 4 2 0 3'\n",
     "# string_of_numbers = '1 1 1 1 1 2 2 2'\n",
     "\n",
     "list_of_numbers = string_of_numbers.split(' ')\n",
