improve solution to task 6

--- a/PythonBasics3/CollectionsPart2_Homework.ipynb
+++ b/PythonBasics3/CollectionsPart2_Homework.ipynb
@@ -218,14 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Сыр: 210 гр\nТоматы: 66 шт\nОгурцы: 60 гр\nМаслины: 30 гр\nОливковое масло: 60 мл\nСалат: 30 гр\nПерец: 60 гр\nКолбаса: 90 гр\nБекон: 90 гр\nОливки: 30 гр\nТесто: 300 гр\nЛимон: 3 шт\nВода: 600 мл\nСахар: 30 гр\nЛайм: 60 гр\n"
+      "Сыр: 300 гр\nТоматы: 66 шт\nОгурцы: 60 гр\nМаслины: 30 гр\nОливковое масло: 60 мл\nСалат: 30 гр\nПерец: 60 гр\nКолбаса: 90 гр\nБекон: 90 гр\nОливки: 30 гр\nТесто: 300 гр\nЛимон: 3 шт\nВода: 600 мл\nСахар: 30 гр\nЛайм: 60 гр\n"
      ]
     }
    ],
@@ -241,7 +241,7 @@
     "        {'ingridient_name': 'перец', 'quantity': 20, 'measure': 'гр'}\n",
     "    ],\n",
     "    'пицца': [\n",
-    "        {'ingridient_name': 'сыр', 'quantity': 20, 'measure': 'гр'},\n",
+    "        {'ingridient_name': 'сыр', 'quantity': 50, 'measure': 'гр'},\n",
     "        {'ingridient_name': 'колбаса', 'quantity': 30, 'measure': 'гр'},\n",
     "        {'ingridient_name': 'бекон', 'quantity': 30, 'measure': 'гр'},\n",
     "        {'ingridient_name': 'оливки', 'quantity': 10, 'measure': 'гр'},\n",
@@ -265,7 +265,9 @@
     "        ingridient_name = product['ingridient_name']\n",
     "        qty = product['quantity']\n",
     "        measure = product['measure']\n",
-    "        if result.setdefault(ingridient_name, [qty, measure]) != [qty, measure]:\n",
+    "        if result.get(ingridient_name) == None:\n",
+    "            result[ingridient_name] = [qty, measure]\n",
+    "        else:\n",
     "            result[ingridient_name][0] += qty\n",
     "\n",
     "for product in result:\n",
