--- a/PythonBasics3/CollectionsPart2_Homework.ipynb
+++ b/PythonBasics3/CollectionsPart2_Homework.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
     "            result[ingridient_name][0] += qty\n",
     "\n",
     "for product in result:\n",
-    "   print(f\"{product.capitalize()}: {result[product][0] * courses}\", result[product][1])\n"
+    "   print(f\"{product.capitalize()}:\", result[product][0] * courses, result[product][1])\n"
    ]
   }
  ]
