--- a/PythonBasics4/Functions_Homework.ipynb
+++ b/PythonBasics4/Functions_Homework.ipynb
@@ -33,14 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[{'type': 'passport', 'number': '2207 876234', 'name': 'Василий Гупкин', 'directory': '1'}, {'type': 'invoice', 'number': '11-2', 'name': 'Геннадий Покемонов', 'directory': '1'}, {'type': 'insurance', 'number': '10006', 'name': 'Аристарх Павлов', 'directory': '2'}]\n"
+      "Неизвестная команда\n",
+      "Конец программы\n"
      ]
     }
    ],
@@ -58,6 +61,9 @@
     "}\n",
     "\n",
     "def create_list_of_docs(docs, shelves):\n",
+    "    '''\n",
+    "    создание списка документов с указанием мест их хранения\n",
+    "    '''\n",
     "    list_of_docs = []\n",
     "    for doc in docs:\n",
     "        current_doc = doc.copy()\n",
@@ -67,72 +73,77 @@
     "                list_of_docs.append(current_doc)\n",
     "    return list_of_docs\n",
     "\n",
-    "'''\n",
-    "user_command = 'p' # input(\"Введите команду: \")\n",
-    "document_no = '10006'\n",
-    "found_name = ''\n",
-    "\n",
-    "for doc in list_of_docs:\n",
-    "    if ('number', document_no) in doc.items():\n",
-    "        found_name = doc['name']\n",
-    "        break\n",
-    "\n",
-    "if found_name != '':\n",
-    "    print('Владелец документа:', found_name)\n",
-    "else:\n",
-    "    print('Документ не найден в базе')\n",
-    "\n",
-    "#####################\n",
-    "user_command = 's'\n",
-    "document_no = '10006'\n",
-    "found_shelf = 0\n",
-    "\n",
-    "for doc in list_of_docs:\n",
-    "    if ('number', document_no) in doc.items():\n",
-    "        found_shelf = doc['directory']\n",
-    "        break\n",
-    "\n",
-    "if found_shelf != 0:\n",
-    "    print('Документ хранится на полке:', found_shelf)\n",
-    "else:\n",
-    "    print('Документ не найден в базе')\n",
-    "\n",
-    "####################\n",
-    "user_command = 'l'\n",
-    "\n",
-    "for doc in list_of_docs:\n",
-    "    print(f\"№: {doc['number']}, тип: {doc['type']}, владелец: {doc['name']}, полка хранения: {doc['directory']}\")\n",
-    "\n",
-    "######################\n",
-    "user_command = 'as'\n",
-    "directory_no = '7'\n",
-    "\n",
-    "if directory_no not in directories.keys():\n",
-    "    directories.update({directory_no: []})\n",
-    "    print('Полка добавлена')\n",
-    "else:\n",
-    "    print('Такая полка уже существует')\n",
-    "print('Текущий перечень полок:', ', '.join(list(directories.keys())))\n",
-    "\n",
-    "##################\n",
-    "user_command = 'ds'\n",
-    "directory_no = '3'\n",
-    "\n",
-    "if directory_no in directories.keys():\n",
-    "    if directories[directory_no] != []:\n",
-    "        print('На полке есть документа, удалите их перед удалением полки')\n",
+    "def print_document_owner(list_of_docs):\n",
+    "    document_no = input('Введите номер документа: ')\n",
+    "    found_data = find_in_documents(list_of_docs, 'name', document_no)\n",
+    "    if found_data != '':\n",
+    "        print('Владелец документа:', found_data)\n",
     "    else:\n",
-    "        del(directories[directory_no])\n",
-    "        print('Полка удалена.')\n",
-    "else:\n",
-    "    print('Такой полки не существует.')\n",
-    "print('Текущий перечень полок:', ', '.join(list(directories.keys())))\n",
-    "'''\n",
+    "        print('Документ не найден в базе')\n",
+    "\n",
+    "def print_document_location(list_of_docs):\n",
+    "    document_no = input('Введите номер документа: ')\n",
+    "    found_data = find_in_documents(list_of_docs, 'directory', document_no)\n",
+    "    if found_data != '':\n",
+    "        print('Документ хранится на полке:', found_data)\n",
+    "    else:\n",
+    "        print('Документ не найден в базе')\n",
+    "\n",
+    "def print_all(list_of_docs):\n",
+    "    for doc in list_of_docs:\n",
+    "        print(f\"№: {doc['number']}, тип: {doc['type']}, владелец: {doc['name']}, полка хранения: {doc['directory']}\")\n",
+    "\n",
+    "def find_in_documents(list_of_docs, what, document_no):\n",
+    "    found_data = ''\n",
+    "    for doc in list_of_docs:\n",
+    "        if ('number', document_no) in doc.items():\n",
+    "            found_data = doc[what]\n",
+    "            break\n",
+    "    return found_data\n",
+    "\n",
+    "def add_shelf():\n",
+    "    shelf_no = input('Введите номер полки: ')\n",
+    "    if shelf_no not in directories.keys():\n",
+    "        directories.update({shelf_no: []})\n",
+    "        print('Полка добавлена')\n",
+    "    else:\n",
+    "        print('Такая полка уже существует')\n",
+    "\n",
+    "def delete_shelf():\n",
+    "    shelf_no = input('Введите номер полки: ')\n",
+    "    if shelf_no in directories.keys():\n",
+    "        if directories[shelf_no] != []:\n",
+    "            print('На полке есть документа, удалите их перед удалением полки')\n",
+    "        else:\n",
+    "            del(directories[shelf_no])\n",
+    "            print('Полка удалена.')\n",
+    "    else:\n",
+    "        print('Такой полки не существует.')\n",
+    "    \n",
+    "def print_all_locations():\n",
+    "    print('Текущий перечень полок:', ', '.join(list(directories.keys())))\n",
     "\n",
     "def main():\n",
     "    list_of_docs = create_list_of_docs(documents, directories)\n",
-    "    print(list_of_docs)\n",
-    "    # print(documents)\n",
+    "    while True:\n",
+    "        user_command = input(\"Введите команду: \")\n",
+    "        if user_command == 'p':\n",
+    "            print_document_owner(list_of_docs)    \n",
+    "        elif user_command == 's':\n",
+    "            print_document_location(list_of_docs)\n",
+    "        elif user_command == 'l':\n",
+    "            print_all(list_of_docs)\n",
+    "        elif user_command == 'as':\n",
+    "            add_shelf()\n",
+    "            print_all_locations()\n",
+    "        elif user_command == 'ds':\n",
+    "            delete_shelf()\n",
+    "            print_all_locations()\n",
+    "        elif user_command == 'q':\n",
+    "            print('Конец программы')\n",
+    "            break\n",
+    "        else:\n",
+    "            print('Неизвестная команда')\n",
     "    return\n",
     "\n",
     "main()\n"
