--- a/PythonBasics4/Functions_Homework.ipynb
+++ b/PythonBasics4/Functions_Homework.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -42,7 +42,6 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Неизвестная команда\n",
       "Конец программы\n"
      ]
     }
@@ -60,6 +59,7 @@
     "    '3': []\n",
     "}\n",
     "\n",
+    "\n",
     "def create_list_of_docs(docs, shelves):\n",
     "    '''\n",
     "    создание списка документов с указанием мест их хранения\n",
@@ -73,7 +73,11 @@
     "                list_of_docs.append(current_doc)\n",
     "    return list_of_docs\n",
     "\n",
+    "\n",
     "def print_document_owner(list_of_docs):\n",
+    "    '''\n",
+    "    поиск владельца документа, команда p\n",
+    "    '''\n",
     "    document_no = input('Введите номер документа: ')\n",
     "    found_data = find_in_documents(list_of_docs, 'name', document_no)\n",
     "    if found_data != '':\n",
@@ -81,7 +85,11 @@
     "    else:\n",
     "        print('Документ не найден в базе')\n",
     "\n",
+    "\n",
     "def print_document_location(list_of_docs):\n",
+    "    '''\n",
+    "    поиск полки хранения документа, команда s\n",
+    "    '''\n",
     "    document_no = input('Введите номер документа: ')\n",
     "    found_data = find_in_documents(list_of_docs, 'directory', document_no)\n",
     "    if found_data != '':\n",
@@ -89,11 +97,19 @@
     "    else:\n",
     "        print('Документ не найден в базе')\n",
     "\n",
+    "\n",
     "def print_all(list_of_docs):\n",
+    "    '''\n",
+    "    печать всей информации о документах, команда l\n",
+    "    '''\n",
     "    for doc in list_of_docs:\n",
     "        print(f\"№: {doc['number']}, тип: {doc['type']}, владелец: {doc['name']}, полка хранения: {doc['directory']}\")\n",
     "\n",
+    "\n",
     "def find_in_documents(list_of_docs, what, document_no):\n",
+    "    '''\n",
+    "    поиск документа в справочнике\n",
+    "    '''\n",
     "    found_data = ''\n",
     "    for doc in list_of_docs:\n",
     "        if ('number', document_no) in doc.items():\n",
@@ -101,7 +117,23 @@
     "            break\n",
     "    return found_data\n",
     "\n",
+    "\n",
+    "def add_document(list_of_docs):\n",
+    "    '''\n",
+    "    добавление документа в список, команда ad\n",
+    "    '''\n",
+    "    document_no = input('Введите номер документа: ')\n",
+    "    document_type = input('Введите тип документа: ')\n",
+    "    document_owner = input('Введите владельца документа: ')\n",
+    "    shelf_no = input('Введите полку для хранения: ')\n",
+    "    if check_shelf(shelf_no):\n",
+    "        # добавить документ\n",
+    "        \n",
+    "\n",
     "def add_shelf():\n",
+    "    '''\n",
+    "    добавление полки, команда as\n",
+    "    '''\n",
     "    shelf_no = input('Введите номер полки: ')\n",
     "    if shelf_no not in directories.keys():\n",
     "        directories.update({shelf_no: []})\n",
@@ -109,19 +141,31 @@
     "    else:\n",
     "        print('Такая полка уже существует')\n",
     "\n",
+    "\n",
     "def delete_shelf():\n",
+    "    '''\n",
+    "    удаление полки, команда ds\n",
+    "    '''\n",
     "    shelf_no = input('Введите номер полки: ')\n",
-    "    if shelf_no in directories.keys():\n",
+    "    if check_shelf(shelf_no):\n",
     "        if directories[shelf_no] != []:\n",
     "            print('На полке есть документа, удалите их перед удалением полки')\n",
     "        else:\n",
     "            del(directories[shelf_no])\n",
     "            print('Полка удалена.')\n",
+    "\n",
+    "\n",
+    "def check_shelf(shelf_no):\n",
+    "    if shelf_no in directories.keys():\n",
+    "        return True\n",
     "    else:\n",
-    "        print('Такой полки не существует.')\n",
-    "    \n",
+    "        print('Такой полки не существует. Добавьте полку командой as')\n",
+    "        return False\n",
+    "\n",
+    "\n",
     "def print_all_locations():\n",
     "    print('Текущий перечень полок:', ', '.join(list(directories.keys())))\n",
+    "\n",
     "\n",
     "def main():\n",
     "    list_of_docs = create_list_of_docs(documents, directories)\n",
@@ -133,6 +177,15 @@
     "            print_document_location(list_of_docs)\n",
     "        elif user_command == 'l':\n",
     "            print_all(list_of_docs)\n",
+    "        elif user_command == 'ad':\n",
+    "            add_document(list_of_docs)\n",
+    "            pass\n",
+    "        elif user_command == 'd':\n",
+    "            # delete_document(list_of_docs)\n",
+    "            pass\n",
+    "        elif user_command == 'm':\n",
+    "            # move_document(list_of_docs)\n",
+    "            pass\n",
     "        elif user_command == 'as':\n",
     "            add_shelf()\n",
     "            print_all_locations()\n",
