--- a/PythonBasics4/Functions_Homework.ipynb
+++ b/PythonBasics4/Functions_Homework.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
@@ -42,6 +42,30 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "Текущий список документов:\n",
+      "№: 2207 876234, тип: passport, владелец: Василий Гупкин, полка хранения: 1\n",
+      "№: 11-2, тип: invoice, владелец: Геннадий Покемонов, полка хранения: 1\n",
+      "№: 10006, тип: insurance, владелец: Аристарх Павлов, полка хранения: 2\n",
+      "Документ перемещен\n",
+      "Текущий список документов:\n",
+      "№: 2207 876234, тип: passport, владелец: Василий Гупкин, полка хранения: 1\n",
+      "№: 11-2, тип: invoice, владелец: Геннадий Покемонов, полка хранения: 3\n",
+      "№: 10006, тип: insurance, владелец: Аристарх Павлов, полка хранения: 2\n",
+      "Текущий список документов:\n",
+      "№: 2207 876234, тип: passport, владелец: Василий Гупкин, полка хранения: 1\n",
+      "№: 11-2, тип: invoice, владелец: Геннадий Покемонов, полка хранения: 3\n",
+      "№: 10006, тип: insurance, владелец: Аристарх Павлов, полка хранения: 2\n",
+      "На полке есть документы, удалите их перед удалением полки\n",
+      "Текущий перечень полок: 1, 2, 3\n",
+      "Документ перемещен\n",
+      "Текущий список документов:\n",
+      "№: 2207 876234, тип: passport, владелец: Василий Гупкин, полка хранения: 1\n",
+      "№: 11-2, тип: invoice, владелец: Геннадий Покемонов, полка хранения: 2\n",
+      "№: 10006, тип: insurance, владелец: Аристарх Павлов, полка хранения: 2\n",
+      "Полка удалена.\n",
+      "Текущий перечень полок: 1, 2\n",
+      "Документ не найден в базе\n",
+      "Такой полки не существует. Добавьте полку командой as\n",
       "Конец программы\n"
      ]
     }
@@ -59,66 +83,38 @@
     "    '3': []\n",
     "}\n",
     "\n",
-    "\n",
-    "def create_list_of_docs(docs, shelves):\n",
-    "    '''\n",
-    "    создание списка документов с указанием мест их хранения\n",
-    "    '''\n",
-    "    list_of_docs = []\n",
-    "    for doc in docs:\n",
-    "        current_doc = doc.copy()\n",
-    "        for shelf in shelves:\n",
-    "            if current_doc['number'] in shelves[shelf]:\n",
-    "                current_doc.update({'directory': shelf})\n",
-    "                list_of_docs.append(current_doc)\n",
-    "    return list_of_docs\n",
-    "\n",
-    "\n",
-    "def print_document_owner(list_of_docs):\n",
+    "# команды\n",
+    "def print_document_owner():\n",
     "    '''\n",
     "    поиск владельца документа, команда p\n",
     "    '''\n",
     "    document_no = input('Введите номер документа: ')\n",
-    "    found_data = find_in_documents(list_of_docs, 'name', document_no)\n",
-    "    if found_data != '':\n",
-    "        print('Владелец документа:', found_data)\n",
+    "    current_doc = find_in_documents(documents, document_no)\n",
+    "    if current_doc != {}:\n",
+    "        print('Владелец документа:', current_doc['name'])\n",
     "    else:\n",
     "        print('Документ не найден в базе')\n",
     "\n",
-    "\n",
-    "def print_document_location(list_of_docs):\n",
+    "def print_document_location():\n",
     "    '''\n",
     "    поиск полки хранения документа, команда s\n",
     "    '''\n",
     "    document_no = input('Введите номер документа: ')\n",
-    "    found_data = find_in_documents(list_of_docs, 'directory', document_no)\n",
-    "    if found_data != '':\n",
-    "        print('Документ хранится на полке:', found_data)\n",
+    "    current_doc = find_in_documents(create_list_of_docs(), document_no)\n",
+    "    if current_doc != {}:\n",
+    "        print('Документ хранится на полке:', current_doc['directory'])\n",
     "    else:\n",
     "        print('Документ не найден в базе')\n",
     "\n",
-    "\n",
-    "def print_all(list_of_docs):\n",
+    "def print_all():\n",
     "    '''\n",
     "    печать всей информации о документах, команда l\n",
     "    '''\n",
-    "    for doc in list_of_docs:\n",
+    "    print('Текущий список документов:')\n",
+    "    for doc in create_list_of_docs():\n",
     "        print(f\"№: {doc['number']}, тип: {doc['type']}, владелец: {doc['name']}, полка хранения: {doc['directory']}\")\n",
     "\n",
-    "\n",
-    "def find_in_documents(list_of_docs, what, document_no):\n",
-    "    '''\n",
-    "    поиск документа в справочнике\n",
-    "    '''\n",
-    "    found_data = ''\n",
-    "    for doc in list_of_docs:\n",
-    "        if ('number', document_no) in doc.items():\n",
-    "            found_data = doc[what]\n",
-    "            break\n",
-    "    return found_data\n",
-    "\n",
-    "\n",
-    "def add_document(list_of_docs):\n",
+    "def add_document():\n",
     "    '''\n",
     "    добавление документа в список, команда ad\n",
     "    '''\n",
@@ -127,9 +123,45 @@
     "    document_owner = input('Введите владельца документа: ')\n",
     "    shelf_no = input('Введите полку для хранения: ')\n",
     "    if check_shelf(shelf_no):\n",
-    "        # добавить документ\n",
-    "        \n",
+    "        if find_in_documents(documents,document_no) == {}:\n",
+    "            documents.append(dict({'type': document_type, 'number': document_no, 'name': document_owner}))\n",
+    "            directories[shelf_no].append(document_no)\n",
+    "            print('Документ добавлен')\n",
+    "            print_all()\n",
+    "        else:\n",
+    "            print('Такой документ уже существует')\n",
     "\n",
+    "def delete_document():\n",
+    "    '''\n",
+    "    удаление документа, команда d\n",
+    "    '''\n",
+    "    document_no = input('Введите номер документа: ')\n",
+    "    current_doc = find_in_documents(documents, document_no)\n",
+    "    current_doc_with_shelf = find_in_documents(create_list_of_docs(), document_no)\n",
+    "    if current_doc != {}:\n",
+    "        documents.remove(current_doc)\n",
+    "        directories[current_doc_with_shelf['directory']].remove(document_no)\n",
+    "        print('Документ удален')\n",
+    "        print_all()\n",
+    "    else:\n",
+    "        print('Документ не найден в базе')\n",
+    "\n",
+    "def move_document():\n",
+    "    '''\n",
+    "    перемещение документа, команда m\n",
+    "    '''\n",
+    "    document_no = input('Введите номер документа: ')\n",
+    "    shelf_no = input('Введите полку для хранения: ')\n",
+    "    if check_shelf(shelf_no):\n",
+    "        current_doc = find_in_documents(create_list_of_docs(), document_no)\n",
+    "        if current_doc != {}:\n",
+    "            directories[current_doc['directory']].remove(document_no)\n",
+    "            directories[shelf_no].append(document_no)\n",
+    "            print('Документ перемещен')\n",
+    "            print_all()\n",
+    "        else:\n",
+    "            print('Документ не найден в базе')\n",
+    " \n",
     "def add_shelf():\n",
     "    '''\n",
     "    добавление полки, команда as\n",
@@ -141,7 +173,6 @@
     "    else:\n",
     "        print('Такая полка уже существует')\n",
     "\n",
-    "\n",
     "def delete_shelf():\n",
     "    '''\n",
     "    удаление полки, команда ds\n",
@@ -149,11 +180,36 @@
     "    shelf_no = input('Введите номер полки: ')\n",
     "    if check_shelf(shelf_no):\n",
     "        if directories[shelf_no] != []:\n",
-    "            print('На полке есть документа, удалите их перед удалением полки')\n",
+    "            print('На полке есть документы, удалите их перед удалением полки')\n",
     "        else:\n",
     "            del(directories[shelf_no])\n",
     "            print('Полка удалена.')\n",
     "\n",
+    "\n",
+    "# служебные функции\n",
+    "def create_list_of_docs():\n",
+    "    '''\n",
+    "    создание списка документов с указанием мест их хранения\n",
+    "    '''\n",
+    "    list_of_docs = []\n",
+    "    for doc in documents:\n",
+    "        current_doc = doc.copy()\n",
+    "        for shelf in directories:\n",
+    "            if current_doc['number'] in directories[shelf]:\n",
+    "                current_doc.update({'directory': shelf})\n",
+    "                list_of_docs.append(current_doc)\n",
+    "    return list_of_docs\n",
+    "\n",
+    "def find_in_documents(list_of_docs, document_no):\n",
+    "    '''\n",
+    "    поиск документа в справочнике\n",
+    "    '''\n",
+    "    found_doc = {}\n",
+    "    for doc in list_of_docs:\n",
+    "        if ('number', document_no) in doc.items():\n",
+    "            found_doc = doc\n",
+    "            break\n",
+    "    return found_doc\n",
     "\n",
     "def check_shelf(shelf_no):\n",
     "    if shelf_no in directories.keys():\n",
@@ -162,30 +218,26 @@
     "        print('Такой полки не существует. Добавьте полку командой as')\n",
     "        return False\n",
     "\n",
-    "\n",
     "def print_all_locations():\n",
     "    print('Текущий перечень полок:', ', '.join(list(directories.keys())))\n",
     "\n",
     "\n",
+    "# тело программы\n",
     "def main():\n",
-    "    list_of_docs = create_list_of_docs(documents, directories)\n",
     "    while True:\n",
     "        user_command = input(\"Введите команду: \")\n",
     "        if user_command == 'p':\n",
-    "            print_document_owner(list_of_docs)    \n",
+    "            print_document_owner()    \n",
     "        elif user_command == 's':\n",
-    "            print_document_location(list_of_docs)\n",
+    "            print_document_location()\n",
     "        elif user_command == 'l':\n",
-    "            print_all(list_of_docs)\n",
+    "            print_all()\n",
     "        elif user_command == 'ad':\n",
-    "            add_document(list_of_docs)\n",
-    "            pass\n",
+    "            add_document()\n",
     "        elif user_command == 'd':\n",
-    "            # delete_document(list_of_docs)\n",
-    "            pass\n",
+    "            delete_document()\n",
     "        elif user_command == 'm':\n",
-    "            # move_document(list_of_docs)\n",
-    "            pass\n",
+    "            move_document()\n",
     "        elif user_command == 'as':\n",
     "            add_shelf()\n",
     "            print_all_locations()\n",
@@ -196,10 +248,10 @@
     "            print('Конец программы')\n",
     "            break\n",
     "        else:\n",
-    "            print('Неизвестная команда')\n",
+    "            print('Неизвестная команда', user_command)\n",
     "    return\n",
     "\n",
-    "main()\n"
+    "main()"
    ]
   }
  ]
