--- a/PythonBasics_Files/Files_Homework.ipynb
+++ b/PythonBasics_Files/Files_Homework.ipynb
@@ -92,6 +92,50 @@
     "main()\n",
     "    "
    ]
+  },
+  {
+   "source": [
+    "### Задание 2.\n",
+    "Для каждого user_id в файле visit_log.csv определите третий столбец с категорией покупки (если покупка была, сам файл visit_log.csv изменять не надо).  \n",
+    "Запишите в файл funnel.csv визиты из файла visit_log.csv, в которых были покупки с указанием категории.  \n",
+    "Учтите условия на данные:\n",
+    "- содержимое purchase_log.txt помещается в оперативную память компьютера\n",
+    "- содержимое visit_log.csv - нет; используйте только построчную обработку этого файла"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1840e0b9d4,other\n\n4e4f90fcfb,context\n\nafea8d72fc,other\n\n2824221f38,email\n\n373a6055fe,other\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "purch_dict = make_dict_from_file('purchase_log.txt')\n",
+    "\n",
+    "with open('visit_log.csv') as f_visits:\n",
+    "    with open('funnel.csv', 'w') as f_result:\n",
+    "        for line in f_visits:\n",
+    "            list_ = line.strip().split(',')\n",
+    "\n",
+    "            if purch_dict.get(list_[0]) != None:\n",
+    "                f_result.write(line)\n",
+    "\n",
+    "# печать первых 5 строк из результирующего файла для проверки\n",
+    "f = open('funnel.csv')\n",
+    "for i, line in enumerate(f):\n",
+    "    print(line)\n",
+    "    if i >= 4:\n",
+    "        break\n"
+   ]
   }
  ]
 }
