--- a/PythonBasics_Files/Files_Homework.ipynb
+++ b/PythonBasics_Files/Files_Homework.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('Administrator': virtualenv)",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)",
    "metadata": {
     "interpreter": {
      "hash": "485035c5b2a6f2b50dc2dc5ca51aeeb931032fbc9adc2e30c7c528d6bf8a9176"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -66,15 +66,10 @@
     "    '''\n",
     "    result_dict = {}\n",
     "    with open(file_name, encoding='utf-8') as f:\n",
-    "        for i, line in enumerate(f):\n",
+    "        next(f) # пропустить заголовок\n",
+    "        for line in f:\n",
     "            dict_ = json.loads(line)\n",
-    "\n",
-    "            if i == 0:\n",
-    "                key = list(dict_.values())[0]\n",
-    "                value = list(dict_.values())[1]\n",
-    "                continue\n",
-    "\n",
-    "            result_dict.update({dict_[key]: dict_[value]})\n",
+    "            result_dict.update({dict_['user_id']: dict_['category']})\n",
     "        return result_dict\n",
     "\n",
     "\n",
@@ -107,30 +102,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1840e0b9d4,other\n\n4e4f90fcfb,context\n\nafea8d72fc,other\n\n2824221f38,email\n\n373a6055fe,other\n\n"
+      "1840e0b9d4,other,Продукты\n\n4e4f90fcfb,context,Электроника\n\nafea8d72fc,other,Электроника\n\n2824221f38,email,Продукты\n\n373a6055fe,other,Бытовая техника\n\n"
      ]
     }
    ],
    "source": [
     "purch_dict = make_dict_from_file('purchase_log.txt')\n",
     "\n",
-    "with open('visit_log.csv') as f_visits:\n",
-    "    with open('funnel.csv', 'w') as f_result:\n",
+    "with open('visit_log.csv', encoding='utf-8') as f_visits:\n",
+    "    with open('funnel.csv', 'w', encoding='utf-8') as f_result:\n",
     "        for line in f_visits:\n",
     "            list_ = line.strip().split(',')\n",
     "\n",
-    "            if purch_dict.get(list_[0]) != None:\n",
-    "                f_result.write(line)\n",
+    "            category = purch_dict.get(list_[0])\n",
+    "            if category != None:\n",
+    "                list_.append(category)\n",
+    "                f_result.write(','.join(list_) + '\\n')\n",
     "\n",
     "# печать первых 5 строк из результирующего файла для проверки\n",
-    "f = open('funnel.csv')\n",
+    "f = open('funnel.csv', encoding='utf-8')\n",
     "for i, line in enumerate(f):\n",
     "    print(line)\n",
     "    if i >= 4:\n",
