--- a/diploma/diploma.ipynb
+++ b/diploma/diploma.ipynb
@@ -613,7 +613,7 @@
     "df2['left_fact'] = Y_test\n",
     "df2['left_predict'] = Y_pred\n",
     "\n",
-    "df2\n",
+    "df2.head()\n",
     "\n"
    ]
   }
